# Rag

./: README.md
concept/: advance_query.md  chunk.md  documentloader.md  hosting.md  hybrid_serarch.md  observability.md  pdf_loader.md  pdf_loader1.md  production_rag_decision.md  production_selection.md  prompt.md  rag.md  rag_architecture.md
langcourse/: .gitignore  bm25_retriever.py  chunks_storage.json  hybrid_search.py  load_document.py  local_host_embedding.py  main.py  pdf_loader.py  pyproject.toml  semantic_vs_recursive.py  smart_chunker.py  text_spliters.py
