[project]
name = "langcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-google-vertexai>=3.2.3",
    "langgraph>=1.2.2",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
